fix login and signup issues
